--- a/_posts/1970-01-01-intro.md
+++ b/_posts/1970-01-01-intro.md
@@ -4,7 +4,7 @@ title: "intro"
 date: 1970-01-01
 categories: general
 description: "3 guesses"
-tags: [intro]
+tags: []
 ---
 
 i made this site to write about things that interest me
