--- a/_posts/1970-01-01-intro.md
+++ b/_posts/1970-01-01-intro.md
@@ -7,6 +7,4 @@ description: "3 guesses"
 tags: []
 ---
 
-i made this site to write about things that interest me
-
-feel free to ignore
+in the beginning, there was `Hello World!`
