--- a/_posts/2025-12-10-thm_aoc2025_sq1.md
+++ b/_posts/2025-12-10-thm_aoc2025_sq1.md
@@ -4,7 +4,7 @@ title: "TryHackMe Advent of Cyber 2025 - Sidequest 1"
 date: 2025-12-10
 categories: tryhackme
 description: "great disappearing act"
-tags: [tryhackme, hackermans]
+tags: [hackermans]
 ---
 
 ![hellyea]({{ '/assets/images/aoc2025sq1.png' | relative_url }})
