--- a/_posts/2025-12-17-thm_aoc2025_sq2.md
+++ b/_posts/2025-12-17-thm_aoc2025_sq2.md
@@ -4,7 +4,7 @@ title: "TryHackMe Advent of Cyber 2025 - Sidequest 2"
 date: 2025-12-17
 categories: tryhackme
 description: "scheme catcher"
-tags: [tryhackme, hackermans]
+tags: [hackermans]
 ---
 
 ![hellyea]({{ '/assets/images/aoc2025sq2.png' | relative_url }})
